--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	    myHero.update();   
 	    for(var i=0;i<fishCount;i++){
 			fishes[i].x=fishes[i].x+fishes[i].speed;
-			if (fishes[i].x>=myHero.x && fishes[i].y>=myHero.y && fishes[i].y<=myHero.y+myHero.height) 
+			if (fishes[i].x>=myHero.x && fishes[i].x<=myHero.x+myHero.width && fishes[i].y>=myHero.y && fishes[i].y<=myHero.y+myHero.height) 
 			{
 				fishes[i].x=0;
 				fishes[i].y=Math.floor(Math.random()*380+1);
